[gd_scene load_steps=17 format=3 uid="uid://b37igovglwinu"]

[ext_resource type="Script" uid="uid://clls3330y86lk" path="res://Main.gd" id="1_272bh"]
[ext_resource type="PackedScene" uid="uid://cbfhfk2kvrvni" path="res://fields/rebuilt/assets/rebuilt_import.scn" id="1_ig7tw"]
[ext_resource type="Script" uid="uid://cng042w20ifja" path="res://FreeLookCamera.gd" id="2_7mycd"]
[ext_resource type="PackedScene" uid="uid://b8x6c8x7eax0" path="res://NTTreeView.tscn" id="3_h2yge"]
[ext_resource type="Script" uid="uid://456458rr87sj" path="res://Field2D.gd" id="4_field2d"]
[ext_resource type="PackedScene" uid="uid://b0d8x7483rjrp" path="res://TopicDock.tscn" id="5_topicdock"]
[ext_resource type="ArrayMesh" uid="uid://cm41flj20561y" path="res://fields/rebuilt/assets/collision/bump.obj" id="6_7mycd"]
[ext_resource type="Texture2D" uid="uid://b18ah1fnlaw7m" path="res://fields/rebuilt/assets/field_with_fuel.png" id="6_ycdy4"]
[ext_resource type="ArrayMesh" uid="uid://bljrl02d8hyec" path="res://fields/rebuilt/assets/collision/hub.obj" id="7_efxa6"]
[ext_resource type="ArrayMesh" uid="uid://bgok0t2ewieno" path="res://fields/rebuilt/assets/collision/tower.obj" id="8_dg77c"]
[ext_resource type="ArrayMesh" uid="uid://cb6ci3ddffj5c" path="res://fields/rebuilt/assets/collision/trench_fixed.obj" id="9_ycdy4"]
[ext_resource type="ArrayMesh" uid="uid://82fo1b4u1ox7" path="res://fields/rebuilt/assets/collision/trench_hinged_base.obj" id="10_w48qg"]
[ext_resource type="ArrayMesh" uid="uid://bg1fwamptjfd0" path="res://fields/rebuilt/assets/collision/trench_hinged_arm.obj" id="11_vivmo"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_lquwl"]

[sub_resource type="Sky" id="Sky_5vw27"]
sky_material = SubResource("ProceduralSkyMaterial_lquwl")

[sub_resource type="Environment" id="Environment_kek77"]
sky = SubResource("Sky_5vw27")
ambient_light_source = 3
ambient_light_sky_contribution = 0.8
tonemap_mode = 2

[node name="Node3D" type="Node3D"]
script = ExtResource("1_272bh")

[node name="Field" parent="." instance=ExtResource("1_ig7tw")]
transform = Transform3D(-4.3711385e-08, 0, -0.99999994, 0, 1, 0, 0.99999994, 0, -4.3711385e-08, -4.0324006, 0, -8.255458)

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(-0.99635875, 0.0034647742, -0.08518996, -0.018174686, 0.96757776, 0.25191867, 0.083300754, 0.25254968, -0.9639915, -2.0244346, 5.2732444, -12.241826)
script = ExtResource("2_7mycd")

[node name="HSplitContainer" type="HSplitContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
split_offset = 300

[node name="NTTreeView" parent="HSplitContainer" instance=ExtResource("3_h2yge")]
layout_mode = 2

[node name="RightSide" type="VBoxContainer" parent="HSplitContainer"]
layout_mode = 2

[node name="TabBar" type="TabBar" parent="HSplitContainer/RightSide"]
layout_mode = 2
current_tab = 0
tab_count = 2
tab_0/title = "3D Field"
tab_1/title = "2D Field"

[node name="VSplitContainer" type="VSplitContainer" parent="HSplitContainer/RightSide"]
layout_mode = 2
size_flags_vertical = 3
split_offset = 400

[node name="ViewContainer" type="MarginContainer" parent="HSplitContainer/RightSide/VSplitContainer"]
layout_mode = 2

[node name="Spacer" type="Control" parent="HSplitContainer/RightSide/VSplitContainer/ViewContainer"]
layout_mode = 2
mouse_filter = 2

[node name="Field2D" type="Control" parent="HSplitContainer/RightSide/VSplitContainer/ViewContainer"]
visible = false
layout_mode = 2
script = ExtResource("4_field2d")
field_image = ExtResource("6_ycdy4")

[node name="TopicDock" parent="HSplitContainer/RightSide/VSplitContainer" instance=ExtResource("5_topicdock")]
layout_mode = 2

[node name="RobotParent" type="Node3D" parent="."]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_kek77")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.34202015, 0.88302225, -0.32139385, 0, 0.34202018, 0.9396926, 0.9396926, -0.32139382, 0.116977796, 0, 32.162754, -6.7865057)
light_energy = 2.0
light_angular_distance = 1.0
shadow_enabled = true
shadow_blur = 1.2

[node name="TempCollision" type="Node3D" parent="."]
visible = false

[node name="Bump" type="MeshInstance3D" parent="TempCollision"]
transform = Transform3D(-4.371139e-08, 1, 4.371139e-08, 0, -4.371139e-08, 1, 1, 4.371139e-08, 1.9106855e-15, -2.505, -0.021, -4.614)
mesh = ExtResource("6_7mycd")

[node name="Hub" type="MeshInstance3D" parent="TempCollision"]
transform = Transform3D(-4.371139e-08, 1, 4.371139e-08, 0, -4.371139e-08, 1, 1, 4.371139e-08, 1.9106855e-15, -4.024739, 0, -4.61)
mesh = ExtResource("7_efxa6")

[node name="Tower" type="MeshInstance3D" parent="TempCollision"]
transform = Transform3D(-4.371139e-08, 1, 4.371139e-08, 0, -4.371139e-08, 1, 1, 4.371139e-08, 1.9106855e-15, -3.746859, 0, -0.5286882)
mesh = ExtResource("8_dg77c")

[node name="TrenchFixed" type="MeshInstance3D" parent="TempCollision"]
transform = Transform3D(-4.371139e-08, 1, 4.371139e-08, 0, -4.371139e-08, 1, 1, 4.371139e-08, 1.9106855e-15, -1.4266534, 0, -4.614311)
mesh = ExtResource("9_ycdy4")

[node name="TrenchHingedBase" type="MeshInstance3D" parent="TempCollision"]
transform = Transform3D(-4.371139e-08, 1, 4.371139e-08, 0, -4.371139e-08, 1, 1, 4.371139e-08, 1.9106855e-15, -6.638, 0, -4.614)
mesh = ExtResource("10_w48qg")

[node name="TrenchHingedArm" type="MeshInstance3D" parent="TempCollision"]
transform = Transform3D(-4.371139e-08, 1, 4.371139e-08, 0, -4.371139e-08, 1, 1, 4.371139e-08, 1.9106855e-15, -6.561, 0.619, -4.614)
mesh = ExtResource("11_vivmo")
